# data_science_project

./: .gitignore  README.md  classes.py  graph_functions_and_tests.py  impl.py  impl_generic.py  impl_graph.py  oldRun.py  prove.py  pyproject.toml  relational.db  run.py  run2.py
data/: relational_publications.csv
test/: graph_test.py  relational_test.py
test/data_for_testing/relational_data/: relational_other_data.json  relational_publications.csv
test/data_for_testing/relational_data_one_most_cited/: relational_other_data.json  relational_publications.csv
test/data_graph/graph_project_data/: graph_other_data_test.json  graph_publications_test.csv
